add grid and flex layout

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -61,9 +61,9 @@
             <td class="news-left-bar-td " rowspan="2">
                 <div class="news-left-bar">
                     <div class="btn-group ">
-                        <a href="index.html" class="button">Головна</a>
-                        <a href="straberry.html" class="button">Полуничний</a>
-                        <a href="chocolate.html" class="button">Шоколадний</a>
+                        <a href="index.html" class="button">Без grid та flex</a>
+                        <a href="index-grid.html" class="button">З grid</a>
+                        <a href="index-flex.html" class="button">З flex</a>
                         
                     </div>
                 
