try to fix difference between table and grid\flex

--- a/code/html/index-flex.html
+++ b/code/html/index-flex.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="bottom-center-bar border">
-                <p class="center">
+                <p class="center bottom-center-bar-text">
                     Як казав класик: "Ice cream so good yes yes yes"
                 </p>
             </div>
